--- a/json-egg/Cargo.toml
+++ b/json-egg/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 
 [dependencies]
-egg = "0.6"
+egg = { version = "0.8", features=["serde-1"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 log = "0.4"
 indexmap = "1"
