--- a/json-egg/Cargo.toml
+++ b/json-egg/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4"
 indexmap = "1"
 libc = "0.2.71"
 smallvec = "1.4.0"
+symbolic_expressions = "5.0.3"
 
 num-rational = "0.3.0"
 num-integer = "0.1.42"
