--- a/json-egg/Cargo.toml
+++ b/json-egg/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 
 [dependencies]
-# egg = { version = "0.8", features=["serde-1"] }
+# egg = { git="https://github.com/egraphs-good/egg.git", rev="a851106", features=["serde-1"] }
 egg = { version = "0.9", features=["serde-1"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
