--- a/json-egg/Cargo.toml
+++ b/json-egg/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 
 [dependencies]
-# egg = { git="https://github.com/egraphs-good/egg.git", rev="a851106", features=["serde-1"] }
-egg = { version = "0.9", features=["serde-1"] }
+egg = { git="https://github.com/egraphs-good/egg.git", rev="a851106", features=["serde-1"] }
+#egg = { version = "0.9", features=["serde-1"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
