--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,29 @@
 /build
 /lean_packages
 tags
+*.code-workspace
+lake-packages/
+lean_packages/
+*~
+\#*
+.#*
+*.lock
+build
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+.projectile
+.lean_options
+.vs
+compile_commands.json
+*.idea
+tasks.json
+settings.json
+.gdb_history
+.vscode
+*.produced.out
+CMakeSettings.json
+CppProperties.json
+tags
+utils/
