--- a/json-egg/Cargo.toml
+++ b/json-egg/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2018"
 
 
 [dependencies]
-egg = { git="https://github.com/egraphs-good/egg.git", rev="e19a18f", features=["serde-1"] }
-#egg = { version = "0.9", features=["serde-1"] }
+#egg = { git="https://github.com/egraphs-good/egg.git", rev="e19a18f", features=["serde-1"] }
+egg = { version = "0.9.3", features=["serde-1"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+fxhash = "0.2.1"
 log = "0.4"
 indexmap = "1"
 libc = "0.2.71"
